Selenium tests BUY (#235)
* WIP: unfinished BUY automatic checkout

* WIP: unfinished state

* Basic BUY checks

* WIP: adjusted timeouts 1

* WIP: adjusted timeout

* Order list statuses indicators check

* Fix tests with no screenshots saving

* WIP: SELL selenium. To create order button (OKPAY, QIWI, PAYPAL, SKRILL). Facing frontend errors

* remove payment_import and order_release apply'es from test case (are trigerred by payment success and add_withdraw address).

* WIP: more params to 'Icon not found message'

* WIP: fix selection on click_on_payment_icon()

* WIP: sell mocked Transaction import

* WIP: SELL mocked to release

* WIP: refactor

* WIP: fix e2e sell test mock

* WIP: test pre-commit

* WIP: assign empty payments list

* WIP: mock reserve_cards requests

* WIP: mock Addresses (created by allocate_wallets) transactions on tests

* WIP: mock one tickers call on TickerBaseCase setUp

* WIP: settings log change

* WIP: remove .apply()'s from test_sell

* WIP: rewrite payment icon clicker

* WIP: loop on payment methods modal wait

* WIP: fix icon modal wait loop

* WIP: remover all apply() from selenium tests

* WIP: error msg to icon Timeout

* WIP: fix raise

* WIP: sleep before phone selection

* WIP: page_source to log

* WIP add current_url

* WIP: add bundle to wercker

* WIP: add order status check on checksell

* WIP: DEBUG log level

* WIP: different steps for Backend and Selenium tests

* WIP: remove coverage from run-selenium-tests.sh

* WIP: add source to payment toggle error msg

* WIP: repeat paip toggle check

* WIP: fix repeat on phone number

* WIP: error on phone selector

* WIP: typo

* WIP: repeat onstatus indicator checker

* WIP: Wait for login phone to be clickable

* issavescreenshots False

* order set as COMPLETED on sell_order_release

--- a/wercker.yml
+++ b/wercker.yml
@@ -433,16 +433,32 @@ tests:
           mkdir -p ${pip_download_cache}
           yes w | pip install --cache-dir ${pip_download_cache} -r requirements.txt
     - script:
+        name: create/validate static build roots
+        code: |
+           mkdir -p static/dist/js
+           mkdir -p static/dist/css
+    - script:
       name: Install node requirements
       code: |
         # rm -fr node_modules && npm install
         npm install
+    - script:
+        name: create/validate static build roots
+        code: |
+           mkdir -p static/dist/js
+           mkdir -p static/dist/css
     - maxon/npm-run:
         script: bower
+    - maxon/npm-run:
+        script: build-js
     - script:
         name: Backend tests
         code: |
           DJANGO_SETTINGS_MODULE=nexchange.settings_test ./run-tests.sh
+    - script:
+        name: Selenium tests
+        code: |
+          DJANGO_SETTINGS_MODULE=nexchange.settings_test ./run-selenium-tests.sh
     - script:
         name: Frontend tests
         code: |
