switch Selenium with Backend tests on test pipeline

--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
   },
   "scripts": {
     "test": "karma start --single-run",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "lint": "jshint static/js/**"
   },
   "repository": {
     "type": "git",
