--- a/wercker.yml
+++ b/wercker.yml
@@ -119,6 +119,7 @@ dev:
     - internal/watch:
         code: |
           echo 'Dev server running'
+          npm run build-dev &
           tail -n 50 -f /var/log/*.log &
           newrelic-admin run-program python manage.py runserver 0.0.0.0:8000
         reload: false
