add password protection to staging

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,12 @@ events {
 }
 
 http {
+  map $http_host $auth_type {
+    default "off";
+    staging.nexchange.co.uk "Restricted";
+    staging.nexchange.ru "Restricted";
+  }
+
   include mime.types;
   # fallback in case we can't determine a type
   default_type application/octet-stream;
@@ -36,7 +42,9 @@ http {
   }
 
   server {
+    auth_basic "Developer access";
     listen 443 http2;
+    auth_basic_user_file /etc/nginx/.htpasswd;
     
     ssl on;
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
