--- a/wercker.yml
+++ b/wercker.yml
@@ -304,6 +304,11 @@ build:
           # Start Cron Process
           cron
           # Start celery stuff
+
+          # Protect staging by password from ENV
+          echo -n "$HTTP_AUTH_USER:" >> /etc/nginx/.htpasswd
+          openssl passwd -apr1 $HTTP_AUTH_PASS >> /etc/nginx/.htpasswd
+
           adduser --disabled-password --gecos '' celery_user
           celery worker -A nexchange --uid=celery_user -l info &
           celery beat -A nexchange -l info &
