--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
             - /nexchange/etc/letsencrypt:/etc/letsencrypt
             - /nexchange/etc/nginx/ssl:/etc/nginx/ssl
             - /nexchange/etc/nginx/nginx.conf:/etc/nginx/nginx.conf
+            - /nexchange/etc/nginx/.htpasswd:/etc/nginx/.htpasswd
             - /nexchange/mediafiles:/usr/share/nginx/html/media
             - /nexchange/staticfiles:/usr/share/nginx/html/static
         ports:
