fix type mapping

--- a/nginx.conf
+++ b/nginx.conf
@@ -42,8 +42,8 @@ http {
   }
 
   server {
-    auth_basic "Developer access";
     listen 443 http2;
+    auth_basic $auth_type;
     auth_basic_user_file /etc/nginx/.htpasswd;
     
     ssl on;
