Bug/remove nexchange manager (#261)
* add amount to Deposit QR's (#255)

* add amount to Deposit QR's

* Add names to crypto currencies fixtures, remove backend currency searches parameter name to code

* Fix tests

* Add screenshot path print on selenium tests (#258)

* Add screenshot path print on selenium tests

* Path to the screenshot print

* replace path to workflow parameter on the screenshot print

* WIP payment preferences (#257)

* Support for all currencies

* all parit WIP

* all currencies VISA MASTERCARD fixtures WIP

* removed screenshots

* remove screenshots 2

* WIP correct fixture layout

* fix cc cards names, remove send order mail on local

* articles merge migration

* remove duplicate from webpack bundle

* change visa class

* comment out qiwi from Selenium UI tests

* fix selenium xpath

* fix tests

* add password protection to staging (#260)

* remove redundant settings from staging settings

* correct .htpasswd file path

* fix type mapping

* Remove nexchange manager

* Add backend tests before selenium

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-toggle": "^2.2.2",
     "browserify": "<14",
     "card": "^2.1.1",
+    "clipboard": "^1.6.1",
     "commonjs-highcharts": "^4.0.3",
     "css-loader": "^0.26.2",
     "cssnano": "^3.10.0",
