--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "jquery": "^1.11.3",
     "jquery-ticker": "^1.0.0",
     "jquery-ui": "^1.11.3",
+    "jquery-validate": "^2.0.0",
+    "jquery-validation": "^1.16.0",
     "js-cookie": "^2.1.3",
     "moment-timezone": "^0.5.11",
     "node-sass": "^4.5.0",
