--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-bundle-tracker": "^0.2.0",
-    "x-editable": "^1.5.1"
+    "x-editable": "^1.5.1",
+    "bootstrap-social": "^5.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
