Feature/renoscoin static get order (#292)
* Feat: RENOS coin, generic ticker adapters, Renoscoin pairs, WIP Needs more tests

* renos coind wip scalfold uphold

* Generic implementation for tasks WIP

* fix UserCard reference

* refactor payments.models.UserCards -> core.models.UserCard

* clean requirements

* intermediate commit WIP generic wallet backends

* attempt testing

* correct module path

* attempt correct tests

* remove redundant things from package.json

* more test corrections

* working order

* WIP tests

* more fixes

* fix more tests

* uphold https mocks fix

* fix buyorder tests

* further tests fixes

* more fixes

* sofort e2e test fixed

* test_notification fixed

* attempt static get order

* progress with fixing tests

* implementation suggestion for api type resolution as a task decorator

* all tests pass (except ticker regression)

* all tests fixed

* generalise /UPHOLD_ROOT/

* remove self.UPHOLD_ROOT

* fix ui tests

* temporarily comment out unit tests

* revert typo from previous commit

* fix selenium tests

* dummy commit

* Fix UNIQUE address error on add _withdraw selenium

* lint

* wait_page_load method on selenium base (for dynamic sleep time)

* merge migrations

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
         links:
             - postgis
             - redis
+        ports:
+          - "65223:65223"
         restart: always
         logging:
             driver: gelf
