--- a/wercker.yml
+++ b/wercker.yml
@@ -272,6 +272,12 @@ build:
           export EMAIL_HOST_USER=${EMAIL_HOST_USER}
           export EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
           export EMAIL_PORT=${EMAIL_PORT}
+
+          #RPC1
+          export RPC_RPC1_USER=${RPC_RPC1_USER}
+          export RPC_RPC1_PASSWORD=${RPC_RPC1_PASSWORD}
+          export RPC_RPC1_PORT=${RPC_RPC1_PORT}
+          export RPC_RPC1_HOST=${RPC_RPC1_HOST}
           #
           while ! nc -z ${POSTGIS_PORT_5432_TCP_ADDR} ${POSTGIS_PORT_5432_TCP_PORT}
           do
@@ -325,6 +331,7 @@ build:
           if ! [ $PYDEBUG ]; then
             rm $0
           fi
+
     - script:
         name: set entrypoint as executable
         code: |
