--- a/wercker.yml
+++ b/wercker.yml
@@ -468,7 +468,7 @@ tests:
     - script:
         name: Backend tests
         code: |
-#          DJANGO_SETTINGS_MODULE=nexchange.settings_test ./run-tests.sh
+          DJANGO_SETTINGS_MODULE=nexchange.settings_test ./run-tests.sh
 
     - script:
         name: Selenium tests
