--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ autopep8>=1.2.4
 celery>=4
 coverage>=4.2
 dj-database-url>=0.4.1
-Django>=1.10
+Django==1.11.1
 django-bootstrap3>=7.0.1
 django-cors-headers>=1.1.0
 django-debug-toolbar>=1.5
