--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "webpack-bundle-tracker": "^0.2.0",
     "x-editable": "^1.5.1",
     "bootstrap-social": "^5.1.1",
-    "cryptocoins-icons": "^2.1.0"
+    "cryptocoins-icons": "2.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
