--- a/wercker.yml
+++ b/wercker.yml
@@ -473,6 +473,8 @@ tests:
         rm -fr node_modules && npm install
     - maxon/npm-run:
         script: build
+    - tcnksm/goveralls:
+        token: Y9cfC0hPig5JrjZe4zxgvgcuoZ3AmxZYo
     - script:
         name: Backend tests
         code: |
