--- a/requirements.txt
+++ b/requirements.txt
@@ -45,3 +45,4 @@ urllib3
 pillow
 -e git+https://github.com/SarunasAzna/django-loginurl.git#egg=loginurl
 social-auth-app-django==1.1.0
+coveralls==1.1
