--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
   "scripts": {
     "test": "karma start --single-run",
     "build": "webpack --config webpack.config.js",
-    "build-dev": "webpack --watch --config webpack.config.js --devtool source-map",
+    "build-dev": "webpack --config webpack.config.dev.js --devtool source-map",
+    "watch": "webpack --watch --config webpack.config.dev.js",
     "lint": "jshint static/js/**"
   },
   "repository": {
