--- a/requirements.txt
+++ b/requirements.txt
@@ -46,3 +46,4 @@ pillow
 -e git+https://github.com/SarunasAzna/django-loginurl.git#egg=loginurl
 social-auth-app-django==1.1.0
 coveralls==1.1
+flower==0.9.2
