--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ requests-mock>=1.0.0
 django-filter>=0.14.0
 psycopg2>=2.6.1
 django-session-security
-django-axes=2.3.2
+django-axes==2.3.2
 bs4
 -e git+https://github.com/veox/python3-krakenex.git#egg=krakenx
 -e git+https://github.com/byrnereese/uphold-sdk-python.git#egg=uphold
