--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "babel-preset-stage-0": "^6.22.0",
     "bootstrap-loader": "^2.0.0-beta.22",
     "bootstrap-sass": "^3.3.7",
+    "bootstrap-social": "^5.1.1",
     "bootstrap-toggle": "^2.2.2",
     "browserify": "<14",
     "card": "^2.1.1",
     "clipboard": "^1.6.1",
     "commonjs-highcharts": "^4.0.3",
+    "cryptocoins-icons": "2.1.0",
     "css-loader": "^0.26.2",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.1",
@@ -25,6 +27,7 @@
     "jquery-ui": "^1.11.3",
     "jquery-validation": "^1.16.0",
     "js-cookie": "^2.1.3",
+    "moment": "^2.18.1",
     "moment-timezone": "^0.5.11",
     "node-sass": "^4.5.0",
     "nprogress": "^0.2.0",
@@ -36,9 +39,7 @@
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-bundle-tracker": "^0.2.0",
-    "x-editable": "^1.5.1",
-    "bootstrap-social": "^5.1.1",
-    "cryptocoins-icons": "2.1.0"
+    "x-editable": "^1.5.1"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
