feature/unlock-staging
feature/unlock-staging

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,11 +13,11 @@ events {
 }
 
 http {
-  map $http_host $auth_type {
-    default "off";
-    staging.nexchange.co.uk "Restricted";
-    staging.nexchange.ru "Restricted";
-  }
+  # map $http_host $auth_type {
+  #  default "off";
+  #  staging.nexchange.co.uk "Restricted";
+  #  staging.nexchange.ru "Restricted";
+  # }
 
   include mime.types;
   # fallback in case we can't determine a type
