--- a/nginx.conf
+++ b/nginx.conf
@@ -43,8 +43,8 @@ http {
 
   server {
     listen 443 http2;
-    auth_basic $auth_type;
-    auth_basic_user_file /etc/nginx/.htpasswd;
+    # auth_basic $auth_type;
+    # auth_basic_user_file /etc/nginx/.htpasswd;
     
     ssl on;
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
@@ -81,7 +81,7 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       # enable this if and only if you use HTTPS
       proxy_set_header X-Forwarded-Proto https;
-      proxy_set_header Host $http_host;
+      # proxy_set_header Host $http_host;
       # we don't want nginx trying to do something clever with
       # redirects, we set the Host: header above already.
       proxy_redirect off;
