--- a/wercker.yml
+++ b/wercker.yml
@@ -273,6 +273,16 @@ build:
           export CARDPMT_API_PASS=${CARDPMT_API_PASS}
           # SOFORT
           export SOFORT_API_KEY=${SOFORT_API_KEY}
+          # ADV CASH
+          export ADV_CASH_API_NAME=${ADV_CASH_API_NAME}
+          export ADV_CASH_ACCOUNT_EMAIL=${ADV_CASH_ACCOUNT_EMAIL}
+          export ADV_CASH_API_PASSWORD=${ADV_CASH_API_PASSWORD}
+          export ADV_CASH_SCI_NAME=${ADV_CASH_SCI_NAME}
+          export ADV_CASH_SCI_PASSWORD=${ADV_CASH_SCI_PASSWORD}
+          export ADV_CASH_WALLET_USD=${ADV_CASH_WALLET_USD}
+          export ADV_CASH_WALLET_EUR=${ADV_CASH_WALLET_EUR}
+          export ADV_CASH_WALLET_GBP=${ADV_CASH_WALLET_GBP}
+          export ADV_CASH_WALLET_RUB=${ADV_CASH_WALLET_RUB}
           # ROBOKASSA
           export ROBOKASSA_IS_TEST=${ROBOKASSA_IS_TEST}
           export ROBOKASSA_LOGIN=${ROBOKASSA_LOGIN}
