--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery-ui": "^1.11.3",
     "jquery-validation": "^1.16.0",
     "js-cookie": "^2.1.3",
+    "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.11",
     "node-sass": "^4.5.0",
