--- a/dredd.yml
+++ b/dredd.yml
@@ -33,4 +33,4 @@ hooks-worker-handler-host: 127.0.0.1
 hooks-worker-handler-port: 61321
 config: ./dredd.yml
 blueprint: apiary.apib
-endpoint: 'https://nexchange.co.uk'
+endpoint: 'http://localhost:8000'
