feature/get-user-read-ip (#467)

--- a/nginx.conf
+++ b/nginx.conf
@@ -78,7 +78,11 @@ http {
     }
 
     location @proxy_to_app {
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      # we are already setting this header on the frontend proxy
+      # TODO: find a conditional way to set this
+      # header based on it's presence / HOST header
+      # 
+      # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       # enable this if and only if you use HTTPS
       proxy_set_header X-Forwarded-Proto https;
       proxy_set_header Host $http_host;
