Apiary tech review (#475)
* hook Dredd tests to stagging server

* update README

* WIP: failing tests fix, ticker history Parameters to correct style

* Fix apiary Parameters definitions

* Payload and Headers descriptions

* WIP: response to apiary doc comments 1

* WIP: fix content-type

* remove Api tests from wercker because stagging is not working

* Dredd tests on test pipeline (with Django LiveServerTestCase)

* rename api_test file

* update README for api-tests

* lint

* Referral draft api docs on apiary.apib

* referral.turnover calculations with BTC rate

* Removed FIXME'ies from apiary.apib for referral revenue and turnover

* remove fixme from partial phone

* add one referral fixture to api_tests

--- a/wercker.yml
+++ b/wercker.yml
@@ -488,7 +488,7 @@ tests:
     - script:
         name: API tests
         code: |
-            # ./node_modules/.bin/dredd
+          DJANGO_SETTINGS_MODULE=nexchange.settings_test ./run-api-tests.sh
     - script:
         name: Backend tests
         code: |
