One direction order status flow (#494)
* WIP: scaffold of one direction order status flow

* WIP: order statuses one-direction tests

* WIP: 1 WITHDRAW TXN safer on exchange_order_release

* Exclude orders with None type Transactions from exchange_release

* WIP: Validation on models.transaction for multiple Withdraw txns

* Fix logic on release tasks

* Incremential order statuses

* Command for preparing reply and type None transactions fotr unique_together constraints

* transaction.admin_comment migration

* Add order and transaction migration commands to wercker.yml

* WIP: state machine - register_deposit

* WIP: FAILED_RELEASED -> PRE_RELEASE, scaffold of order status state machine

* WIP: register_deposit state machine on tx_importer

* WIP: confirm_deposit state machine on update_pending_transactions

* WIP: pre_release state machine on order releases

* WIP: release state machine on exchange release

* WIP: release state machine on buy order release

* WIP: complete state machine on update pendeing

* Remove SELL logic

* WIP: CANCEL CardPmt orders

* Remove additional transitions

* CANCEL on fiat orders, and order statuses migration

* test for release state machine

* Tests for release state machine

* Transaction db indexes

* Add release reply

* management fix

* Fix selenium tests

* status_setter -> _validate_status

* Remove additional exchange_order_release_invoke

* Response to PR comments

* PR comments responses 2

--- a/wercker.yml
+++ b/wercker.yml
@@ -349,6 +349,9 @@ build:
           #
           # Start Cron Process
           cron
+          # Fix orders and transactions
+          python manage.py migrate_order_statuses
+          python manage.py fix_replay_transactions
           # Start celery stuff
 
           # Protect staging by password from ENV
